Primeiro commit: adicionando pasta

--- a/app/sobre.html
+++ b/app/sobre.html
@@ -4,8 +4,20 @@
   <head>
     <meta charset="utf-8">
     <title>Sobre o Alura Timer é para coc</title>
+    <link rel="stylesheet" href="css/sobre.css">
   </head>
   <body>
-    <p>O Alura time é para você guardar seus tempos de estudo na Alura. </p>
+<div class="container">
+  <img src="img/icon.png" alt="Logo Alura Timer">
+  <p>O Alura time é para você guardar seus tempos de estudo na Alura. </p>
+  <p>Versão: 1.0.0</p>
+  <p>Feito por <a href="#" id = "link-Instagram">Francisco Araújo</a></p>
+  <p>Versão do eletron <span id = "versão-electron"></span> </p>
+  <a href="#" id = "link-fechar">Fechar</a>
+
+</div>
+
+    <script src="js/sobre.js"></script>
+
   </body>
 </html>
