--- a/app/sobre.html
+++ b/app/sobre.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <title>Sobre o Alura Timer é para coc</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sobre o Alura Timer</title>
     <link rel="stylesheet" href="css/sobre.css">
-  </head>
-  <body>
-<div class="container">
-  <img src="img/icon.png" alt="Logo Alura Timer">
-  <p>O Alura time é para você guardar seus tempos de estudo na Alura. </p>
-  <p>Versão: 1.0.0</p>
-  <p>Feito por <a href="#" id = "link-Instagram">Francisco Araújo</a></p>
-  <p>Versão do eletron <span id = "versão-electron"></span> </p>
-  <a href="#" id = "link-fechar">Fechar</a>
+</head>
+<body>
 
-</div>
+    <div class="container">
+        <img src="img/icon.png" alt="Logo do AluraTimer">
+        <p>O Alura timer é para voce guardar seus tempos de estudo na Alura.</p>
+        <p>Versão: 1.0.0</p>
+        <p>Feito por <a href="#" id="link-twitter">Francisco Araújo</a></p>
+        <p>Versão do Electron <span id="versao-electron"></span></p>
+        <a href="#" id="link-fechar">Fechar</a>
 
+    </div>
     <script src="js/sobre.js"></script>
-
-  </body>
+</body>
 </html>
