--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
                 <img class="botao-play" src="img/play-button.svg">
             </div>
             <div class="curso-container">
-                <span class="curso">photoshop</span>
+                <span class="curso">introducao-javascript</span>
             </div>
         </div>
 
